# Dev-team

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
deploy-kit/: INSTALL.md  replicate.ps1  setup.ps1
deploy-kit/hermes-skill/: SKILL.md
devteam/: __init__.py  adopt.py  audit.py  bench.py  budget.py  catalog.py  cli.py  config.py  daemon.py  deploy.py  discord_bridge.py  discord_listener.py  doctor.py  eventlog.py  executor.py  gates.py  instruction.py  intake.py  memory.py  pipeline.py  presets.py  qa.py  reflective.py  roles.py  router.py  skillpack.py  standards.py  state.py  storage.py  subscription.py  worktree.py
devteam/brains/: __init__.py  claude.py  codex.py  gemini.py  jcode.py  opencode.py
devteam/skills/: accessibility.md  api-design.md  architect.md  backend.md  code-style.md  data-privacy.md  database.md  debugging.md  devops.md  e2e.md  frontend.md  git-workflow.md  (+10 more)
docs/: 00-OVERVIEW.md  01-ARCHITECTURE.md  02-EXTENDING.md  03-ROADMAP.md  04-COLLABORATION.md  05-EXECUTION-POLICY.md  06-GLOSSARY.md  QUICKSTART.md  README.md  ROLE-HARNESS.md  STARTER-TASKS.md  jcode.md
scripts/: install-daemon-task.ps1
tests/: conftest.py  test_adopt.py  test_audit.py  test_bench.py  test_brains.py  test_budget.py  test_cascade.py  test_catalog.py  test_daemon.py  test_deploy_phase.py  test_eventlog.py  test_gates.py  test_instruction.py  test_intake.py  test_listener.py  test_memory.py  test_pipeline.py  test_presets.py  test_reflective.py  test_router.py  test_skillpack.py  test_state.py  test_storage.py  test_subscription.py
tools/: md2pdf.py
